# 0VoiceAV

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  pull_dependency.ps1  pull_dependency.sh
docs/: ffmpeg-conan-options.md  ffmpeg-dependency.md
lessons/00-ffmpeg-version/: main.cpp
lessons/08-ffmpeg-demuxing-and-decoding-practice/: CMakeLists.txt  README.md
lessons/08-ffmpeg-demuxing-and-decoding-practice/05-decode-audio/: main.c
lessons/08-ffmpeg-demuxing-and-decoding-practice/06-decode-video/: main.c
voice_av/: README.md
voice_av/00-ffmpeg-version/: CMakeLists.txt  main.cpp
voice_av/08-ffmpeg-demuxing-and-decoding/05-decode-audio/: main.c
voice_av/08-ffmpeg-demuxing-and-decoding/06-decode-video/: main.c
voice_av/08-ffmpeg-demuxing-and-decoding/08-demux-mp4/: main.c
voice_av/08-ffmpeg-demuxing-and-decoding/09-avio_decode-audio/: CMakeLists.txt  main.c
voice_av/09-ffmpeg-encoding-and-muxing/: CMakeLists.txt
voice_av/test_files/: README.md
